# uv2compdb

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/uv2compdb/: __init__.py  __main__.py  cli.py  main.py  parser.py
