[project]
name = "uv2compdb"
version = "0.1.0"
description = "Generate Compilation Database by parse Keil uVision project"
readme = "README.md"
authors = [{ name = "xbin", email = "xbin.xu@qq.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uv2compdb = "uv2compdb:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
