[project]
name = "uv2compdb"
version = "0.3.0"
description = "Generate Compilation Database by parse Keil µVision project"
readme = "README.md"
authors = [{ name = "xbin", email = "xbin.xu@qq.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Utilities",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "keil",
    "MDK",
    "µVision",
    "clangd",
    "Compilation Database",
    "compiled_commands.json",
]
dependencies = []

[project.scripts]
uv2compdb = "uv2compdb:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/xbin-xu/uv2compdb"
Issues = "https://github.com/xbin-xu/uv2compdb/issues"
